[AI-Implementation] implement recommendation engine